# cross-chain-transaction-tracker

./: .env.example  .env.test  .gitattributes  .gitignore  FIX_ALL_ISSUES.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NIGHTLY_WORKFLOW_FIXES.md  README.md  SECURITY_FIXES.md  TESTING.md  WORKFLOW_FIXES_SUMMARY.md  fix_workflows.py  validate_workflows.py  validate_workflows_simple.py  verify-implementation.bat  verify-implementation.sh
.devcontainer/: devocontainer.json
.github/: CI_BRANCH_PROTECTION.md  CODEOWNERS  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_CHECKLIST.md  WORKFLOWS.md  setup-branch-protection.ps1  setup-branch-protection.sh
.github/workflows/: coverage.yml  e2e.yml  integration-e2e.yml  nightly.yml  pr-checks.yml
docs/: api.md  chaos.md  test-flakiness.md
go/: coverage.html  coverage.out  go.mod  go.sum
go/cmd/api/: api_test.go  main.go
infra/: .dockerignore  docker-compose.yml  go.Dockerfile  rust.Dockerfile  test-docker-compose.yml
rust/: Cargo.toml  audit.toml
rust/.cargo/: config.toml
rust/src/: config.rs  main.rs  retry.rs  solana_parser.rs  tests.rs
scripts/: chaos.sh  diagnose-anvil.sh  e2e.sh  test-start.sh  test-stop.sh
tests/e2e/: README.md  conftest.py  requirements.txt  run_e2e.sh  test_chaos.py  test_e2e.py  test_ethereum.py  test_solana.py
tests/e2e/contracts/: ERC20.sol
tests/fixtures/ethereum/: erc20-transfer-1.json
tests/golden/: erc20-transfer-1.normalized.json  sol-transfer-1.normalized.json
tests/integration/: requirements.txt  test_event_delivery.py
(+1 files in other folders)
