[package]
name = "tracker_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenvy = "0.15"
ethers = { version = "2.0", features = ["full"] }
solana-client = "1.18.1"
solana-sdk = "1.18.1"
spl-token = "4.0.0"
solana-transaction-status = "1.18.1"
