[package]
name = "tracker_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenvy = "0.15"
# Updated to ethers 2.x to fix tungstenite vulnerability (RUSTSEC-2023-0065)
ethers = { version = "2.0", features = ["ws"] }
tokio-stream = "0.1"
# Updated Solana dependencies to 2.0+ to fix:
# - curve25519-dalek (RUSTSEC-2024-0344)
# - ed25519-dalek (RUSTSEC-2022-0093)
# - ring (RUSTSEC-2025-0009, RUSTSEC-2025-0010)
# - borsh (RUSTSEC-2023-0033)
solana-client = "2.0"
solana-sdk = "2.0"
spl-token = "6.0"
solana-transaction-status = "2.0"
redis = { version = "0.25.4", features = ["tokio-comp"] }

[dev-dependencies]
serial_test = "2.0"
env_logger = "0.11"
